# Tobacco_cpp_algrithom

./: .gitignore  CMakeLists.txt  CONFIG_README.md  README.md  config.json  docker_build.sh  install_opencv_cuda.sh  main.cpp  optimization_report.md
api/: AnalyzeStream.h  analyze_stream.cpp  integrated_pipeline_optimized.py  ply_array.cpp  ply_array.h
doc/: config.md
include/: batch_loader.hpp  common_types.hpp  defect_detector.hpp  locator.hpp  mapping_system.hpp  ply_processor.hpp  vision_interface.hpp  zmq_publisher.hpp
src/: batch_loader.cpp  defect_detector.cpp  integrated_pipeline_optimized.py  locator.cpp  mapping_system.cpp  ply_processor.cpp  vision_system.cpp  zmq_publisher.cpp
test/: README.md  build.sh  run_test.sh  save_depth_array  save_depth_array.cpp  zmq_receiver  zmq_receiver.cpp
